--- a/static/framework/api_playground/views/main/interpolations.ejs
+++ b/static/framework/api_playground/views/main/interpolations.ejs
@@ -4,8 +4,12 @@ var PARAM_CLUES = {
     encounter_type: "e.g. ambulatory|inpatient",
     date_from: "e.g. 2000-01-01",
     date_to: "e.g. 2012-12-31",
+    date_from_including: "e.g. 2000-01-01",
+    date_to_including: "e.g. 2012-12-31",
+    date_from_excluding: "e.g. 2000-01-01",
+    date_to_excluding: "e.g. 2012-12-31",
     limit: "e.g. 10",
-    offset: "e.g. 0",
+    //offset: "e.g. 0",
     loinc: "e.g. 29571-7|38478-4"
 };
 
